--- a/src/app/views/auth/signup.njk
+++ b/src/app/views/auth/signup.njk
@@ -1,8 +1,7 @@
 {% extends "_layouts/auth.njk" %}
 
-
 {% block body %}
-  <form action="signup" method="post">
+  <form action="/signup" method="post">
     <label for="avatar">
       <img src"/images/avatar.svg" height="24" />
     </label>
@@ -17,7 +16,6 @@
       <input type="checkbox" id="provider" name="provider" value="1" />
       Sou cabelereiro
     </label>
-
 
     <button type="submit"> Criar conta</button>
 
