--- a/src/app/views/appointments/create.njk
+++ b/src/app/views/appointments/create.njk
@@ -11,7 +11,7 @@
     </div>
   </div>
 
-  <form action="/app/appointments/new{{ provider.id }}" method="post">
+  <form action="/app/appointments/new/{{ provider.id }}" method="post">
     <input type="text" class="flatpickr" placeholder="Escolha uma data">
 
       <div id="hours"></div>
